[tool.poetry]
name = "learn-dbt"
version = "0.1.0"
description = ""
authors = ["Darsh <darsh@dxfactor.com>"]

[tool.poetry.dependencies]
python = "^3.8"
dbt = "^0.20.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
